Fix report analysis designer view on safari

--- a/src/main/javascript/app/modules/analyze/components/analyze-report/analyze-report.component.scss
+++ b/src/main/javascript/app/modules/analyze/components/analyze-report/analyze-report.component.scss
@@ -73,6 +73,7 @@ analyze-report {
       height: 100%;
       padding: 10px 24px;
       background-color: #F3F5F8;
+      flex-grow: 1;
     }
 
     &_sub-header {
